[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"
authors = ["Haohang Li <haohang.li@acatsama.io>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.0.1"
reqwest = {version="0.12.7", features=["json","cookies"]}
tokio = {version = "1.17.0", features = ["full"]}
