[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"
authors = ["Haohang Li <haohang.li@acatsama.io>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
config = "0.13"
actix-web = "4.0.1"
reqwest = {version="0.12.7", features=["json","cookies"]}
tokio = {version = "1.17.0", features = ["full"]}
serde = {version = "1", features = ["derive"]}
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }

[dependencies.sqlx]
version = "0.7"
default-features =  false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]
